<?xml version="1.0"?>
<package format="2">
  <name>hark_msgs</name>
  <version>0.0.0</version>
  <description>The hark_msgs package</description>
  <license>BSD</license>
  
  <maintainer email="c.santiago@jp.honda-ri.com">c.santiago</maintainer>
  <url type="website">http://hark.jp</url>



  <license>BSD</license>
  <author>carlos santiago</author>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp -I${prefix}/srv/cpp"/>

  </export>
</package>
